--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # setting environment variable for brightdata
 
-BRIGHT_DATA_USERNAME=brd-customer-hl_cb9363ea-zone-pricecator
-BRIGHT_DATA_PASSWORD=tfdvea0xc8o4
+BRIGHT_DATA_USERNAME=<username-here-not-shown>
+BRIGHT_DATA_PASSWORD=<password-here-not-shown>
