--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 # setting environment variable for brightdata
 
-BRIGHT_DATA_USERNAME=<username-here-not-shown>
-BRIGHT_DATA_PASSWORD=<password-here-not-shown>
+BRIGHT_DATA_USERNAME=brd-customer-hl_cb9363ea-zone-pricecator
+BRIGHT_DATA_PASSWORD=tfdvea0xc8o4
+
+#mongodb connection
+MONGODB_URI=mongodb+srv://shimork:KK2.UcpVEezdUvY@cluster1.umdvk4y.mongodb.net/?retryWrites=true&w=majority
