--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
+    "mongoose": "^8.3.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
