--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ BRIGHT_DATA_PASSWORD=tfdvea0xc8o4
 
 #mongodb connection
 MONGODB_URI=mongodb+srv://shimork:KK2.UcpVEezdUvY@cluster1.umdvk4y.mongodb.net/?retryWrites=true&w=majority
+
+EMAIL_PASSWORD=vickskigoli@04
